<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/bienvenue_sur_l_application"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="94dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@mipmap/ic_logo" />

    <Button
        android:id="@+id/boutonConnexion"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/connexion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pas_de_compte"
        app:layout_constraintStart_toStartOf="@+id/boutonConnexion"
        app:layout_constraintTop_toBottomOf="@+id/boutonConnexion" />

    <Button
        android:id="@+id/boutonInscription"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:fontFamily="sans-serif"
        android:text="@string/cr_ez_en_un"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/boutonConnexion"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/boutonConnexion" />

</androidx.constraintlayout.widget.ConstraintLayout>